--- a/SoureGit/WebServiceDuyTan/WebServiceDuyTan.csproj
+++ b/SoureGit/WebServiceDuyTan/WebServiceDuyTan.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
@@ -98,6 +100,14 @@
     <Content Include="Scripts\proc_UpdateCustomer.sql" />
     <Content Include="Scripts\proc_updateUser.sql" />
     <Content Include="Scripts\Script20160508.txt" />
+    <Content Include="Properties\DataSources\System.Data.DataSet.datasource" />
+    <None Include="Service References\ServiceReferenceGPS\Service.disco" />
+    <None Include="Service References\ServiceReferenceGPS\configuration91.svcinfo" />
+    <None Include="Service References\ServiceReferenceGPS\configuration.svcinfo" />
+    <None Include="Service References\ServiceReferenceGPS\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -114,6 +124,7 @@
     <Compile Include="DbObjects\CommomDB.cs" />
     <Compile Include="DbObjects\EmployeeDB.cs" />
     <Compile Include="DbObjects\GroupUserDB.cs" />
+    <Compile Include="DbObjects\JourneyCarGPS.cs" />
     <Compile Include="DbObjects\JourneyDB.cs" />
     <Compile Include="DbObjects\MenuDB.cs" />
     <Compile Include="DbObjects\PlaceDB.cs" />
@@ -121,6 +132,11 @@
     <Compile Include="DbObjects\TrustDB.cs" />
     <Compile Include="DbObjects\UserDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\ServiceReferenceGPS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="WebServiceDuyTan.asmx.cs">
       <DependentUpon>WebServiceDuyTan.asmx</DependentUpon>
       <SubType>Component</SubType>
@@ -133,6 +149,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\GymProfiles.pubxml" />
+    <None Include="Service References\ServiceReferenceGPS\Service.wsdl" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReferenceGPS\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
