--- a/SoureGit/WebServiceDuyTan/Web.config
+++ b/SoureGit/WebServiceDuyTan/Web.config
@@ -118,15 +118,7 @@
     </runtime>
 
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="ServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://service-multi.quanlyoto.vn:8068/Service.asmx"
-                binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-                contract="ServiceReferenceGPS.ServiceSoap" name="ServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
