--- a/SoureGit/WebServiceDuyTan/bin/WebServiceDuyTan.dll.config
+++ b/SoureGit/WebServiceDuyTan/bin/WebServiceDuyTan.dll.config
@@ -117,4 +117,8 @@
       </assemblyBinding>
     </runtime>
 
+    <system.serviceModel>
+        <bindings />
+        <client />
+    </system.serviceModel>
 </configuration>
